fixed spacing on landing page

--- a/assets/styles/_climatefeedback.scss
+++ b/assets/styles/_climatefeedback.scss
@@ -471,12 +471,12 @@ main.campaign-container{
 
 .campaign-inner{
   .support {
-    height: 100px;
+    height: 80px;
     background-color: #046380;
     h1{
       color: #ffffff;
       text-align: center;
-      line-height: 100px;
+      line-height: 80px;
       margin: 0;
     }
   }
@@ -496,7 +496,7 @@ main.campaign-container{
   }
   .step {
     text-align: center;
-    margin-bottom: 50px;
+//    margin-bottom: 50px;
     p {
       text-align: center;
     }
